tests/baselines/reference/callExpressionWithMissingTypeArgument1.errors.txt
tests/cases/compiler/callExpressionWithMissingTypeArgument1.ts(1,1): error TS2552: Cannot find name 'Foo'. Did you mean 'JSON'?
tests/cases/compiler/callExpressionWithMissingTypeArgument1.ts(1,7): error TS1110: Type expected.


==== tests/cases/compiler/callExpressionWithMissingTypeArgument1.ts (2 errors) ====
    Foo<a,,b>();
    ~~~
!!! error TS2552: Cannot find name 'Foo'. Did you mean 'JSON'?
          ~
!!! error TS1110: Type expected.